--- a/secure-spring-boot/.openshift/params/build
+++ b/secure-spring-boot/.openshift/params/build
@@ -1,7 +1,10 @@
 APPLICATION_NAME: secured-spring-boot
 NAMESPACE: secured-spring-boot-build
-SOURCE_REPOSITORY_URL: https://github.com/redhat-cop/container-pipelines.git
-SOURCE_REPOSITORY_REF: master
+SOURCE_REPOSITORY_URL: https://github.com/dwasinge/container-pipelines.git
+SOURCE_REPOSITORY_REF: secure-spring-boot
+CONTEXT_DIR: secure-spring-boot
 APPLICATION_SOURCE_REPO: https://github.com/redhat-cop/spring-rest.git
 APPLICATION_SOURCE_REF: master
 PIPELINE_SCRIPT: Jenkinsfile
+
+
