--- a/secure-spring-boot/.openshift/projects/projects.yml
+++ b/secure-spring-boot/.openshift/projects/projects.yml
@@ -13,15 +13,15 @@ items:
     name: secured-spring-boot-dev
     creationTimestam: null
   displayName: Spring Rest App - Dev
-- kind: ProjectRequest
-  apiVersion: v1
-  metadata:
-    name: secured-spring-boot-stage
-    creationTimestam: null
-  displayName: Spring Rest App - Stage
-- kind: ProjectRequest
-  apiVersion: v1
-  metadata:
-    name: secured-spring-boot-Prod
-    creationTimestam: null
-  displayName: Spring Rest App - Prod
+#- kind: ProjectRequest
+#  apiVersion: v1
+#  metadata:
+#    name: secured-spring-boot-stage
+#    creationTimestam: null
+#  displayName: Spring Rest App - Stage
+#- kind: ProjectRequest
+#  apiVersion: v1
+#  metadata:
+#    name: secured-spring-boot-Prod
+#    creationTimestam: null
+#  displayName: Spring Rest App - Prod
