--- a/secure-spring-boot/Jenkinsfile
+++ b/secure-spring-boot/Jenkinsfile
@@ -1,12 +1,10 @@
-@Library('pipeline-library@master')
-
-//library identifier: "pipeline-library@master",
-//retriever: modernSCM(
-//  [
-//    $class: "GitSCMSource",
-//    remote: "https://github.com/dwasinge/pipeline-library.git"
-//  ]
-//)
+library identifier: "pipeline-library@master",
+retriever: modernSCM(
+  [
+    $class: "GitSCMSource",
+    remote: "https://github.com/dwasinge/pipeline-library.git"
+  ]
+)
 
 openshift.withCluster() {
   env.NAMESPACE = openshift.project()
