--- a/secure-spring-boot/Jenkinsfile
+++ b/secure-spring-boot/Jenkinsfile
@@ -10,6 +10,7 @@ openshift.withCluster() {
   env.NAMESPACE = openshift.project()
   env.POM_FILE = env.BUILD_CONTEXT_DIR ? "${env.BUILD_CONTEXT_DIR}/pom.xml" : "pom.xml"
   env.APP_NAME = "${JOB_NAME}".replaceAll(/-build.*/, '')
+  env.APP_NAME = "${env.JOB_NAME}".replaceAll(/-?${env.PROJECT_NAME}-?/, '').replaceAll(/-?pipeline-?/, '').replaceAll('/','')
   echo "Starting Pipeline for ${APP_NAME}..."
   env.BUILD = "${env.NAMESPACE}"
   env.DEV = "${APP_NAME}-dev"
@@ -31,16 +32,22 @@ pipeline {
   // Requeres at least one stage
   stages {
 
+    stage('Print Environment') {
+      steps {
+          sh 'printenv'
+      }
+    }
+
     // Checkout source code
     // This is required as Pipeline code is originally checkedout to
     // Jenkins Master but this will also pull this same code to this slave
-    stage('Git Checkout') {
-      steps {
+//    stage('Git Checkout') {
+//      steps {
         // Turn off Git's SSL cert check, uncomment if needed
         // sh 'git config --global http.sslVerify false'
-        git url: "${APPLICATION_SOURCE_REPO}"
-      }
-    }
+//        git url: "${APPLICATION_SOURCE_REPO}"
+//      }
+//    }
 
     // Run Maven build, skipping tests
     stage('Build'){
