--- a/secure-spring-boot/Jenkinsfile
+++ b/secure-spring-boot/Jenkinsfile
@@ -38,6 +38,8 @@ pipeline {
 
           sh 'echo PROJECT_NAME:  $PROJECT_NAME'
 
+          sh 'echo APP_NAME: $APP_NAME'
+
           sh 'ls -la'
 
       }
@@ -46,13 +48,13 @@ pipeline {
     // Checkout source code
     // This is required as Pipeline code is originally checkedout to
     // Jenkins Master but this will also pull this same code to this slave
-//    stage('Git Checkout') {
-//      steps {
+    stage('Git Checkout') {
+      steps {
         // Turn off Git's SSL cert check, uncomment if needed
         // sh 'git config --global http.sslVerify false'
-//        git url: "${APPLICATION_SOURCE_REPO}"
-//      }
-//    }
+        git url: "${APPLICATION_SOURCE_REPO}"
+      }
+    }
 
     // Run Maven build, skipping tests
     stage('Build'){
