--- a/secure-spring-boot/Jenkinsfile
+++ b/secure-spring-boot/Jenkinsfile
@@ -75,8 +75,8 @@ pipeline {
             stage ('Static Analysis') {
                 steps {
                   sonarqubeStaticAnalysis(
-                    buildServerWebHookName: "jenkins"
-                    buildServerWebHookUrl: "${JENKINS_URL}/sonarqube-webhook/"
+                    buildServerWebHookName: "jenkins",
+                    buildServerWebHookUrl: "${JENKINS_URL}/sonarqube-webhook/",
                     dependencyCheckReportDir: "target",
                     dependencyCheckReportFiles: "dependency-check-report.html",
                     dependencyCheckReportName: "OWASP Dependency Check Report",
