--- a/secure-spring-boot/Jenkinsfile
+++ b/secure-spring-boot/Jenkinsfile
@@ -7,15 +7,16 @@ retriever: modernSCM(
 )
 
 openshift.withCluster() {
+
   env.NAMESPACE = openshift.project()
   env.POM_FILE = env.BUILD_CONTEXT_DIR ? "${env.BUILD_CONTEXT_DIR}/pom.xml" : "pom.xml"
-  env.APP_NAME = "${JOB_NAME}".replaceAll(/-build.*/, '')
   env.APP_NAME = "${env.JOB_NAME}".replaceAll(/-?${env.PROJECT_NAME}-?/, '').replaceAll(/-?pipeline-?/, '').replaceAll('/','')
-  echo "Starting Pipeline for ${APP_NAME}..."
   env.BUILD = "${env.NAMESPACE}"
-  env.DEV = "${APP_NAME}-dev"
-  env.STAGE = "${APP_NAME}-stage"
-  env.PROD = "${APP_NAME}-prod"
+  env.DEV = env.BUILD.replace('ci-cd', 'dev')
+  env.TEST = env.BUILD.replace('ci-cd', 'test')
+
+  echo "Starting Pipeline for ${APP_NAME}..."
+
 }
 
 pipeline {
@@ -31,19 +32,6 @@ pipeline {
   // Pipeline Stages start here
   // Requeres at least one stage
   stages {
-
-    stage('Print Environment') {
-      steps {
-          sh 'printenv'
-
-          sh 'echo PROJECT_NAME:  $PROJECT_NAME'
-
-          sh 'echo APP_NAME: $APP_NAME'
-
-          sh 'ls -la'
-
-      }
-    }
 
     // Checkout source code
     // This is required as Pipeline code is originally checkedout to
@@ -70,27 +58,23 @@ pipeline {
       }
     }
 
-    stage('Code Review') {
-        parallel {
-            stage ('Static Analysis') {
-                steps {
-                  sonarqubeStaticAnalysis(
-                    buildServerWebHookName: "jenkins",
-                    buildServerWebHookUrl: "${JENKINS_URL}sonarqube-webhook/",
-                    dependencyCheckReportDir: "target",
-                    dependencyCheckReportFiles: "dependency-check-report.html",
-                    dependencyCheckReportName: "OWASP Dependency Check Report",
-                    dependencyCheckKeepAll: true,
-                    dependencyCheckAlwaysLinkToLastBuild: true,
-                    dependencyCheckAllowMissing: true,
-                    unitTestReportDir: "target/site/jacoco/",
-                    unitTestReportFiles: "index.html",
-                    unitTestReportName: "Jacoco Unit Test Report",
-                    unitTestKeepAll: true,
-                    unitTestAlwaysLinkToLastBuild: false,
-                    unitTestAllowMissing: true)
-                }
-            }
+    stage ('Code Analysis') {
+        steps {
+          sonarqubeStaticAnalysis(
+            buildServerWebHookName: "jenkins",
+            buildServerWebHookUrl: "${JENKINS_URL}sonarqube-webhook/",
+            dependencyCheckReportDir: "target",
+            dependencyCheckReportFiles: "dependency-check-report.html",
+            dependencyCheckReportName: "OWASP Dependency Check Report",
+            dependencyCheckKeepAll: true,
+            dependencyCheckAlwaysLinkToLastBuild: true,
+            dependencyCheckAllowMissing: true,
+            unitTestReportDir: "target/site/jacoco/",
+            unitTestReportFiles: "index.html",
+            unitTestReportName: "Jacoco Unit Test Report",
+            unitTestKeepAll: true,
+            unitTestAlwaysLinkToLastBuild: false,
+            unitTestAllowMissing: true)
         }
     }
 
@@ -126,36 +110,25 @@ pipeline {
       }
     }
 
-    stage('Promote from Dev to Stage') {
-      steps {
-        tagImage(sourceImageName: env.APP_NAME, sourceImagePath: env.DEV, toImagePath: env.STAGE)
-      }
-    }
-
-    stage ('Verify Deployment to Stage') {
-      steps {
-        verifyDeployment(projectName: env.STAGE, targetApp: env.APP_NAME)
-      }
-    }
-
     stage('Promotion gate') {
       steps {
         script {
-          input message: 'Promote application to Production?'
+          input message: 'Promote application to Test?'
         }
       }
     }
 
-    stage('Promote from Stage to Prod') {
+    stage('Promote from Dev to Test') {
       steps {
-        tagImage(sourceImageName: env.APP_NAME, sourceImagePath: env.STAGE, toImagePath: env.PROD)
+        tagImage(sourceImageName: env.APP_NAME, sourceImagePath: env.DEV, toImagePath: env.TEST)
       }
     }
 
-    stage ('Verify Deployment to Prod') {
+    stage ('Verify Deployment to Test') {
       steps {
-        verifyDeployment(projectName: env.PROD, targetApp: env.APP_NAME)
+        verifyDeployment(projectName: env.TEST, targetApp: env.APP_NAME)
       }
     }
+
   }
 }
